[project]
name = "islp-labs"
version = "0.1.0"
requires-python = "==3.12"
dependencies = [
    "islp==0.4.0",
    "joblib==1.4.2",
    "l0bnb==1.0.0",
    "lifelines==0.28.0",
    "lxml==5.2.2",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pygam==0.9.1",
    "pytorch-lightning==2.2.5",
    "scikit-learn==1.5.0",
    "scipy==1.11.4",
    "statsmodels==0.14.2",
    "torch==2.3.0",
    "torchinfo==1.8.0",
    "torchmetrics==1.4.0.post0",
    "torchvision==0.18.0",
]
